k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: python-app

  template:
    metadata:
      labels:
        app: python-app

    spec:
      containers:
      - name: python-app
        image: antzacarias808/python-app:latest

        ports:
        - containerPort: 5000
          protocol: TCP
