k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service

spec:
  selector:
    app: python-app

  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

  type: ClusterIP
