k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: "python-app.test.com"
    http:
      paths:

      - path: /api/v1/healthz
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 5000

      - path: /api/v1/details
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 5000
